--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dev": "cross-env NODE_ENV=development webpack serve --hot --config=webpack.config.dev.js",
     "docs": "cross-env NODE_ENV=production webpack --config=webpack.config.dev.js --progress --mode=production",
     "build": "cross-env NODE_ENV=production webpack --progress --mode=production",
-    "prepublishOnly": "yarn run test && yarn run build"
+    "prepublishOnly": "yarn run build"
   },
   "dependencies": {},
   "devDependencies": {
